---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<T> borsh::de::BorshDeserialize for TupleA<T>
where
    T: borsh::de::BorshDeserialize,
{
    fn deserialize_reader<__R: borsh::io::Read>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        ::core::result::Result::Ok(
            Self(
                <T as borsh::BorshDeserialize>::deserialize_reader(reader)?,
                <u32 as borsh::BorshDeserialize>::deserialize_reader(reader)?,
            ),
        )
    }
}
